styles.css
/* General Styling */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Poppins', sans-serif;
}

html {
    scroll-behavior: smooth;
}

p {
    color: rgb(85,85,85);
}

/* Transition */

a, .btn {
    transition: all 300ms ease;
}

/* Desktop Navigation */

nav, .nav-links {
    display: flex;
}

nav {
    justify-content: space-around;
    align-items: center;
    height: 17vh;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
}

a {
    color: black;
    text-decoration: none;
    text-decoration-color: white;
}

a:hover {
    color: grey;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color: rgb(181, 181, 181);
}

.logo {
    font-size: 2rem;
}

.logo:hover {
    cursor: default;
}

/* Hamburger Menu */
#hamburger-nav {
    display: none;
}

.hamburger-menu {
    position: relative;
    display: inline-block;
}

.hamburger-icon {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 24px;
    width: 30px;
    cursor: pointer;
}

.hamburger-icon span{
    width: 100%;
    height: 2px;
    background-color: black;
    transition: all 0.3 ease-in-out;
}

.menu-links {
    position: absolute;
    top: 100%;
    right: 0%;
    background-color: white;
    width: fit-content;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3 ease-in-out;
}

.menu-links a{
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    color: black;
    text-decoration: none;
    transition: all 0.3 ease-in-out;
}

.menu-links li{
    list-style: none;
}

.menu-links.open {
    max-height: 300px;
}

.hamburger-icon.open span:first-child {
    transform: rotate(45deg) translate(10px , 5px);
}

.hamburger-icon.open span:nth-child(2) {
    opacity: 0;
}

.hamburger-icon.open span:last-child {
    transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
    transform: none;
}

.hamburger-icon span:nth-child(2) {
    opacity: 1;
}
.hamburger-icon span:last-child {
    transform: none;
}

/* Sections */

section {
    padding-top: 4vh;
    height: 96vh;
    margin: 0 10rem;
    box-sizing: border-box;
    min-height: fit-content;
}

/* profile section */

#profile {
    display: flex;
    justify-content: center;
    gap: 5rem;
    height: 80vh;
}

.section-container {
    display: flex;
    gap: 2rem;
    height: 80%;
}

.section__pic-container{
    display: flex;
    margin: auto 0;
}

.profile-pic {
    height: 500px;
    width: 500px;
}

.about-pic {
    height: 400px;
    width: 400px;
}

.section__text{
    align-self: center;
    text-align: center;
}

.section__text p {
    font-weight: 600;
}

.section__text__p1 {
    text-align: center;
}

.section__text__p2{
    font-size: 1.75rem;
    margin-bottom: 1rem;
}

.title {
    font-size: 3rem;
    text-align: center;
}

#socials-container {
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    gap: 1rem;
}

/* Icons */

.icon {
    cursor: pointer;
    height: 2rem;
}

/* Buttons */

.btn-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;
}

.btn-color-1,
.btn-color-2 {
    border: rgb(53, 53, 53) o.1rem solid;
}

.btn-color-1:hover,
.btn-color-2:hover {
    cursor: pointer;

}

.btn-color-1 {
    background: none;
}

.btn-color-2:hover {
    background: black;
}

.btn-color-1:hover,
.btn-color-2 {
    background: rgb(53, 53, 53);
    color: white;
}

.btn-color-1:hover {
    border: white 0.1rem solid;
}

.btn-container {
    gap: 1rem;
}

/* about section */

#about {
    position: relative;
}

.about-containers {
    gap: 2rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
}

.about-details-container {
    justify-content: center;
    flex-direction: column;
}

.about-containers, .about-details-container {
    display: flex;
    gap: 2rem;
    margin-top: 2rem;
}

.about-pic {
    border-radius: 3rem;
}

.arrow {
    position: absolute;
    right: -5rem;
    bottom: 2.5rem;
}

.details-container {
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center; 
    height: 60%;
}

/* Experience Section */

#experience {
    position: relative;
}

.experience-sub-title {
    color: rgb(85, 85, 85);
    font-weight: 600;
    font-size: 1.75rem;
    margin-bottom: 0.5rem;
}

.experience-details-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-top: 0.5rem;
}

.article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2.5rem;
    justify-content: center;
    vertical-align: middle;
}

.article {
    display: flex;
    width: 10rem;
    justify-content: space-around;
    gap: 0.5rem;
}

article .icon {
    cursor: default;
}

.company-logo {
    height: 90px;
    width: 170px;
}

/* projects */

#projects {
    position: relative;
    margin-top: 3rem ;
}

.color-container {
    border-color: rgb(163, 163, 163);
    background: rgb(250, 250, 250);
}

.project-img {
    border-radius: 2rem;
    width: 90%;
    height: 90%;
}

.position-img {
    border-radius: 2rem;
    margin-bottom: 1.5rem;
}

.invictus {
    width: 90%;
    height: 90%;
}

.intern,
.ieee {
    width: 50%;
    height: 50%;
}

.project-title {
    margin: 1rem;
    color: black;
}

.project-btn {
    color: black;
    border-color: rgb(163, 163, 163);
}

/* positions */

#positions {
    position: relative;
}

/* contact  */

#contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 70vh;
}

.contact-info-upper-container {
    display: flex;
    justify-content: center;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1 rem solid;
    border-color: rgb(163, 163, 163);
    background: rgb(250, 250, 250);
    margin: 2rem auto;
    padding: 0.5rem;
}

.contact-info-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 1rem;
}

.contact-info-container p {
    font-size: larger;
}

.contact-icon {
    cursor: default;
}

.email-icon,
.insta-icon {
    height: 2.5rem;
}

/* footer */
footer {
    height: 26vh;
    margin: 0 1rem;
}

footer p {
    text-align: center;
}

/* counter */

.counter {
    font-size: 1rem;
    text-align: right;
    margin-top: 2rem;
}

.counter-img {
    margin-top: 1%;
}

